--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jimp": "^0.6.0",
+    "jsonexport": "^2.4.1",
     "mongodb": "3.1.9",
     "morgan": "~1.9.0",
     "rimraf": "2.6.2"
