--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       - '80:3000'
     links:
       - mongo
-    volumes:
-      -  ~/OneDrive/Documents/code/WebSurvey/public:/public
-      -  ~/OneDrive/Documents/code/WebSurvey/views:/views
+#     volumes:
+#       -  ~/OneDrive/Documents/code/WebSurvey/public:/public
+#       -  ~/OneDrive/Documents/code/WebSurvey/views:/views
   mongo:
     container_name: mongo-app
     image: mongo:4
