--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "jimp": "^0.6.0",
     "jsonexport": "^2.4.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "3.1.9",
     "morgan": "~1.9.0",
     "rimraf": "2.6.2"
