--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - '80:3000'
     links:
       - mongo
+    volumes:
+      - './public/data:/public/data'
 #     volumes:
 #       -  ~/OneDrive/Documents/code/WebSurvey/public:/public
 #       -  ~/OneDrive/Documents/code/WebSurvey/views:/views
@@ -16,3 +18,5 @@ services:
     image: mongo:4
     ports:
       - '27017:27017'
+    volumes:
+      - './db:/data/db'
