--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
     build: .
     ports:
       - '80:3000'
+      - '443:3001'
     links:
       - mongo
     volumes:
       - './public/data:/public/data'
+      - '/etc/letsencrypt:/etc/letsencrypt'
 #     volumes:
 #       -  ~/OneDrive/Documents/code/WebSurvey/public:/public
 #       -  ~/OneDrive/Documents/code/WebSurvey/views:/views
