--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Quiz",
-    "short_name": "Quiz",
-    "description": "Quiz",
+    "name": "Škoda Quiz",
+    "short_name": "Škoda Quiz",
+    "description": "Škoda Quiz",
     "theme_color": "#000000",
     "background_color": "#000000",
     "display": "fullscreen",
