--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   mongo:
     container_name: mongo-app
     image: mongo:4
-    ports:
-      - '27017:27017'
+    # ports:
+      # - '27017:27017'
     volumes:
       - './db:/data/db'
