--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start":"node ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "app-root-path": "^2.1.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-fileupload": "^1.0.0-alpha.1",
